--- a/eggShell/src/app/components/barton/barton.component.scss
+++ b/eggShell/src/app/components/barton/barton.component.scss
@@ -2,74 +2,112 @@ div {
     box-sizing: border-box;
     width: 100%;
     display: flex;
+    flex-direction: column-reverse;
     // flex-wrap: wrap;
     // align-items: center;
     justify-items: space-evenly;
 
     .barton-container {
         box-sizing: border-box;
-        display: inline-block;
-        width: 20em;
-        min-height: 20em;
-        max-width: 100%;
-        margin: 2em auto;
-        vertical-align: top;
+        // display: inline-block;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        min-height: 10em;
+        margin: 2em auto 0;
+        // vertical-align: top;
         text-align: center;
 
         h2 {
             font-weight: 300;
             font-size: medium;
+            margin: 0 auto;
         }
+    }
 
-        .poultry-list {
+    // .poultry-container {
+    //     box-sizing: border-box;
+    //     // display: inline-block;
+    //     display: flex;
+    //     flex-direction: column;
+    //     width: 100%;
+    //     // height: 10em;
+    //     // max-width: 100%;
+    //     margin: 2em auto 0;
+    //     // vertical-align: top;
+    //     text-align: center;
+
+    //     h2 {
+    //         font-weight: 300;
+    //         font-size: medium;
+    //         margin: 0 auto;
+    //     }
+    // }
+
+    #source-list {
+        flex-wrap: nowrap;
+    }
+
+    .poultry-list {
+        box-sizing: border-box;
+        display: flex;
+        // display: inline-flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-items: center;
+        // justify-items: center;
+        justify-content: center;
+        margin: 1em auto;
+        // border: solid 1px #ccc;
+        box-shadow: 4px 4px 12px #ccc;
+        min-height: 10em;
+        background: white;
+        border-radius: 4px;
+        overflow: scroll;
+
+        .items {
             box-sizing: border-box;
             display: flex;
-            // display: inline-flex;
-            flex-direction: row;
-            flex-wrap: wrap;
+            flex-direction: column;
             align-items: center;
-            justify-content: center;
-            margin: 1em auto;
-            // border: solid 1px #ccc;
+            // justify-items: center;
+            justify-content: space-evenly;
+            margin: 1em ;
+            width: 6em;
+            height: 8em;
+            // padding: 20px 10px;
+            border-radius: 50%;
+            // border-bottom: solid 1px #ccc;
             box-shadow: 4px 4px 12px #ccc;
-            min-height: 20em;
-            background: white;
-            border-radius: 4px;
-            overflow: hidden;
-
-            .items {
-                box-sizing: border-box;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                justify-content: space-evenly;
-                margin: 1em auto;
-                width: 6em;
-                height: 8em;
-                // padding: 20px 10px;
-                border-radius: 50%;
+            // color: rgba(0, 0, 0, 0.87);
+            cursor: move;
+            // background-size: cover;
+            // background-size: 92%;
+            background-position: center;
+            background-repeat: no-repeat;
+            font-size: 14px;
+            //   text-align: center;
+            img {
+                margin-top: 0.5em;
+                width: 4.5em;
+                height: 4.5em;
+                border-radius: 0 0 50% 50%;
                 // border-bottom: solid 1px #ccc;
-                box-shadow: 4px 4px 12px #ccc;
-                // color: rgba(0, 0, 0, 0.87);
-                cursor: move;
-                // background-size: cover;
-                // background-size: 92%;
-                background-position: center;
-                background-repeat: no-repeat;
-                font-size: 14px;
-                //   text-align: center;
-                img {
-                    margin-top: 0.5em;
-                    width: 4.5em;
-                    height: 4.5em;
-                    border-radius: 0 0 50% 50%;
-                    // border-bottom: solid 1px #ccc;
-                }
-                h5, h6 {
-                    margin: 0 auto;
-                    padding: 0;
-                    max-width: 5.25em;
-                }
+            }
+            h5,
+            h6 {
+                margin: 0 auto;
+                padding: 0;
+                max-width: 5.25em;
+            }
+        }
+    }
+
+    mat-tab-group {
+        ::ng-deep {
+            .mat-tab-label.mat-tab-disabled {
+                color: unset !important;
+                opacity: unset !important;
             }
         }
     }
