--- a/eggShell/src/app/components/getting-started/getting-started.component.html
+++ b/eggShell/src/app/components/getting-started/getting-started.component.html
@@ -1,12 +1,14 @@
-<mat-stepper class="stepper" [orientation]="(stepperOrientation | async)!" [selectedIndex]="stepperIndex">
+<mat-stepper class="stepper" linear #stepper [orientation]="(stepperOrientation | async)!"
+    [selectedIndex]="stepperIndex">
 
-    <mat-step>
+    <mat-step state="login">
+        <!-- label="Regisztrálj vagy jelentkezz be!" -->
         <ng-template matStepLabel>
             <p class="label">Regisztrálj vagy jelentkezz be!</p>
         </ng-template>
         <!-- [stepControl]="login" -->
         <!-- <app-auth></app-auth> -->
-        <div class="auth">
+        <!-- <div class="auth">
             <div>
                 <button mat-fab (click)="openLoginDialog()">
                     <mat-icon>login</mat-icon>
@@ -19,34 +21,62 @@
                 </button>
                 <p>regisztráció</p>
             </div>
-        </div>
+        </div> -->
 
     </mat-step>
 
-    <mat-step >
+    <mat-step state="barton">
+        <!-- label="Hozz létre egy udvart..." -->
         <ng-template matStepLabel>
             <p class="label">Hozz létre egy udvart...</p>
             <p class="label link" (click)="tabIndex=1">
                 ...vagy csatlakozz egy regisztrált felhasználóhoz
             </p>
-            
+
         </ng-template>
         <mat-tab-group class="tab-group" mat-align-tabs="center" [selectedIndex]="tabIndex">
             <mat-tab label="létrehozok">
                 <app-barton></app-barton>
+                <button mat-fab color="accent" mat-raised-button (click)="saveBarton()">
+                    <mat-icon>send</mat-icon>
+                </button>
             </mat-tab>
             <mat-tab label="csatlakozok">
-                <input type="email" matInput ngModel 
-                    placeholder="egyedszám" 
-                    [(ngModel)]="inviteEmail"
-                    [ngModelOptions]="{standalone: true}" >
-                    <!-- (keyup.enter)="trigger.closeMenu()" -->
+                <form class="invite" (ngSubmit)="sendInvite(inviteEmailFormControl.value)">
+                    <mat-form-field appearance="standard">
+                        <mat-label>Email</mat-label>
+                        <input type="email" matInput [formControl]="inviteEmailFormControl" placeholder="mail@user.com">
+                        <mat-hint>Kérlek add meg annak a regisztrált felhasználónak az email címét, akihez csatlakozni kívánsz!</mat-hint>
+                        <mat-error
+                            *ngIf="inviteEmailFormControl.hasError('email') && !inviteEmailFormControl.hasError('required')">
+                            Kérlek valós email címet adj meg!
+                        </mat-error>
+                        <mat-error *ngIf="inviteEmailFormControl.hasError('required')">
+                            Az email cím megadása <strong>kötelező</strong>
+                        </mat-error>
+                    </mat-form-field>
+                    <button type="submit" mat-fab color="accent" mat-raised-button
+                        [disabled]="inviteEmailFormControl.invalid">
+                        <mat-icon>send</mat-icon>
+                    </button>
+                </form>
             </mat-tab>
         </mat-tab-group>
-        
+
     </mat-step>
-    <!-- <mat-step
-         label="Regisztrálj vagy jelentkezz be!">
-    </mat-step> -->
+
+    <mat-step label="Kész!" state="completed">
+    </mat-step>
+
+    <!-- Icon Overrides -->
+    <ng-template matStepperIcon="login">
+        <mat-icon>person_add</mat-icon>
+    </ng-template>
+    <ng-template matStepperIcon="barton">
+        <mat-icon>fence</mat-icon>
+    </ng-template>
+    <ng-template matStepperIcon="completed">
+        <mat-icon>how_to_reg</mat-icon>
+    </ng-template>
 
 </mat-stepper>
