--- a/eggShell/src/app/components/getting-started/getting-started.component.scss
+++ b/eggShell/src/app/components/getting-started/getting-started.component.scss
@@ -39,5 +39,16 @@
 
     .tab-group {
         margin: 1em auto;
+
+        .invite {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            margin: 3em auto;
+            mat-form-field {
+                margin-bottom: 3em;
+            }
+        }
     }
 }
