--- a/eggShell/src/app/components/login/login.component.html
+++ b/eggShell/src/app/components/login/login.component.html
@@ -8,7 +8,7 @@
 
             <mat-form-field appearance="standard">
                 <mat-label>email cím</mat-label>
-                <input type="email" matInput placeholder="email cím" formControlName="email" required>
+                <input type="email" name="email" matInput placeholder="email cím" formControlName="email" required>
                 <mat-error *ngIf="email.invalid 
                     && (
                         email.dirty || 
@@ -20,7 +20,7 @@
 
             <mat-form-field appearance="standard">
                 <mat-label>jelszó</mat-label>
-                <input type="password" matInput [type]="hide ? 'password' : 'text'" formControlName="password" required>
+                <input type="password" name="password" matInput [type]="hide ? 'password' : 'text'" formControlName="password" required>
                 <button type="button" mat-icon-button matSuffix (click)="hide = !hide"
                     [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
                     <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
