--- a/eggShell/src/app/components/registration/registration.component.html
+++ b/eggShell/src/app/components/registration/registration.component.html
@@ -7,7 +7,7 @@
             
             <mat-form-field appearance="standard">
                 <mat-label>email cím</mat-label>
-                <input type="email" matInput placeholder="pat@example.com" formControlName="email" required>
+                <input type="email" name="email" matInput placeholder="pat@example.com" formControlName="email" required>
                 <mat-error *ngIf="email.invalid 
                 && (
                     email.dirty || 
@@ -19,7 +19,7 @@
             
             <mat-form-field appearance="standard">
                 <mat-label>felhasználónév</mat-label>
-                <input type="text" matInput placeholder="felhasználónév" formControlName="username" required>
+                <input type="text" name="username"matInput placeholder="felhasználónév" formControlName="username" required>
                 <mat-error *ngIf="username.invalid 
                     && (
                         username.dirty || 
@@ -31,7 +31,7 @@
             
             <mat-form-field appearance="standard">
                 <mat-label>jelszó</mat-label>
-                <input type="password" matInput [type]="hide ? 'password' : 'text'" formControlName="password" required>
+                <input type="password" name="password" matInput [type]="hide ? 'password' : 'text'" formControlName="password" required>
                 <mat-error *ngIf="password.invalid 
                     && (
                         password.dirty || 
@@ -47,7 +47,7 @@
 
             <mat-form-field appearance="standard">
                 <mat-label>jelszó</mat-label>
-                <input type="password" matInput [type]="hide ? 'password' : 'text'" formControlName="passCheck"
+                <input type="password" name="password" matInput [type]="hide ? 'password' : 'text'" formControlName="passCheck"
                     required>
                 <mat-error *ngIf="passCheck.invalid 
                     && (
