--- a/eggShell/src/app/components/barton/barton.component.html
+++ b/eggShell/src/app/components/barton/barton.component.html
@@ -1,77 +1,89 @@
 <div cdkDropListGroup>
-    <mat-tab-group class="tab-group" mat-align-tabs="center" [(selectedIndex)]="tabIndex">
-        
-        <mat-tab *ngFor="let barton of bartonsData">
-            <ng-template mat-tab-label >
-                <form ngForm [ngFormOptions]="{updateOn: 'blur'}">
-                    <input type="text" matInput 
-                    ngModel [(ngModel)]="barton.bartonName" 
-                    [ngModelOptions]="{standalone: true}"
-                    [value]="barton.bartonName" >
+
+    <div class="barton-container" >
+        <div class="barton"  
+            *ngFor="let barton of bartonsData; index as i">
+            <div class="barton-header">
+                <mat-form-field>
+                    <form ngForm [ngFormOptions]="{updateOn: 'blur'}">
+                    <input type="text" matInput appearance="standard" ngModel [(ngModel)]="barton.bartonName"
+                        [ngModelOptions]="{standalone: true}" [value]="barton.bartonName">
                 </form>
-            </ng-template>
-
-            <div class="barton-container">
-                <!-- <h2>Udvar lakói</h2> -->
-
-                <div class="poultry-list" cdkDropList [cdkDropListData]="(barton.poultry)"
-                    (cdkDropListDropped)="drop($event)" cdkDropListOrientation="horizontal">
-                    <div  class="items" *ngFor="let item of (barton.poultry)" cdkDrag
-                        [matBadge]="item.quantity" matBadgeColor="accent" [matMenuTriggerFor]="menu"
-                        (click)="logger(item)">
-                        <!-- [ngStyle]="{'background-image': 'url(' + item.image + ')'}"> -->
-                        <!-- <mat-progress-spinner *ngIf="isLoading"></mat-progress-spinner> -->
-                        <mat-menu #menu="matMenu" (click)="$event.stopPropagation()">
-                            <form class="item-form" ngForm mat-menu-item [ngFormOptions]="{updateOn: 'blur'}">
-                                <mat-form-field class="form-field" appearance="standard">
-                                    <mat-label>egyedszám</mat-label>
-                                    <div>
-                                        <input type="number" matInput ngModel placeholder="egyedszám"
-                                            [(ngModel)]="item.quantity" [ngModelOptions]="{standalone: true}"
-                                            [value]="item.quantity" min=0 (keyup.enter)="trigger.closeMenu()"
-                                            (click)="$event.stopPropagation()" (blur)="logger(item)">
-                                    </div>
-                                </mat-form-field>
-
-                                <mat-form-field class="form-field" appearance="standard">
-                                    <mat-label>név</mat-label>
-                                    <input type="text" matInput ngModel placeholder="egyedi név"
-                                        [(ngModel)]="item.customName" [ngModelOptions]="{standalone: true}"
-                                        [value]="item.customName || ''" (keyup.enter)="trigger.closeMenu()"
-                                        (event)="logger($event)" (click)="$event.stopPropagation()"
-                                        (blur)="logger(item)">
-                                </mat-form-field>
-                                <!-- <p>{{item}}</p> -->
-                            </form>
-                        </mat-menu>
-                        <img [src]="URL + item.image" [alt]="item.species">
-                        <h5 *ngIf="!item.customName">{{item.species}}</h5>
-                        <h5 *ngIf="item.customName">{{item.customName}}</h5>
-                        <h6 *ngIf="!item.customName && (item.nameOfSex !== item.species)">{{item.nameOfSex}}</h6>
-                    </div>
+                </mat-form-field>
+                
+                <div class="header-buttons">
+                    <button mat-icon-button color="accent" (click)="addNewBarton(i)">
+                        <mat-icon>add_circle</mat-icon>
+                    </button>
+                    <button mat-icon-button color="warn" (click)="deleteBarton(i)">
+                        <mat-icon>delete</mat-icon>
+                    </button>
                 </div>
+
             </div>
 
-        </mat-tab>
-        <mat-tab disabled class="tab-button" color="accent">
-            <ng-template mat-tab-label>
-                <button mat-icon-button color="accent" (click)="addNewBarton()">
-                    <mat-icon >add_circle</mat-icon>
-                </button>
-                <button mat-icon-button color="warn" (click)="deleteBarton(tabIndex)">
-                    <mat-icon >delete</mat-icon>
-                </button>
-            </ng-template>
-        </mat-tab>
-    </mat-tab-group>
+            <div class="poultry-list" cdkDropList [cdkDropListData]="(barton.poultry)"
+                (cdkDropListDropped)="drop($event)" cdkDropListOrientation="horizontal">
+                <div class="items" *ngFor="let item of (barton.poultry)" cdkDrag [matBadge]="item.quantity"
+                    matBadgeColor="accent" [matMenuTriggerFor]="menu" (click)="logger(item)">
+                    <mat-menu #menu="matMenu" (click)="$event.stopPropagation()">
+                        <form class="item-form" ngForm mat-menu-item [ngFormOptions]="{updateOn: 'blur'}">
+                            <mat-form-field class="form-field" appearance="standard">
+                                <mat-label>egyedszám</mat-label>
+                                <div>
+                                    <input type="number" matInput ngModel placeholder="egyedszám"
+                                        [(ngModel)]="item.quantity" [ngModelOptions]="{standalone: true}"
+                                        [value]="item.quantity" min=0 (keyup.enter)="trigger.closeMenu()"
+                                        (click)="$event.stopPropagation()" (blur)="logger(item)">
+                                </div>
+                            </mat-form-field>
+                            <mat-form-field class="form-field" appearance="standard">
+                                <mat-label>név</mat-label>
+                                <input type="text" matInput ngModel placeholder="egyedi név"
+                                    [(ngModel)]="item.customName" [ngModelOptions]="{standalone: true}"
+                                    [value]="item.customName || ''" (keyup.enter)="trigger.closeMenu()"
+                                    (event)="logger($event)" (click)="$event.stopPropagation()" (blur)="logger(item)">
+                            </mat-form-field>
+                            <mat-form-field class="form-field" appearance="standard">
+                                <mat-label>beszerzés dátuma</mat-label>
+                                <input type="date" matInput ngModel placeholder="beszerzés dátuma"
+                                    [(ngModel)]="item.purchaseDate" [ngModelOptions]="{standalone: true}"
+                                    [value]="item.purchaseDate" (keyup.enter)="trigger.closeMenu()"
+                                    (event)="logger($event)" (click)="$event.stopPropagation()" (blur)="logger(item)">
+                            </mat-form-field>
+                            <mat-form-field class="form-field" appearance="standard">
+                                <mat-label>ár</mat-label>
+                                <input type="number" matInput ngModel placeholder="egyed ára"
+                                    [(ngModel)]="item.purchasePrice" [ngModelOptions]="{standalone: true}"
+                                    [value]="item.purchasePrice" min=0 (keyup.enter)="trigger.closeMenu()"
+                                    (event)="logger($event)" (click)="$event.stopPropagation()" (blur)="logger(item)">
+                                <span matSuffix>Ft</span>
+                            </mat-form-field>
+                            <mat-form-field class="form-field" appearance="standard">
+                                <mat-label>kor</mat-label>
+                                <input type="number" matInput ngModel placeholder="egyed kora beszerzéskor"
+                                    [(ngModel)]="item.ageAtPurchase" [ngModelOptions]="{standalone: true}"
+                                    [value]="item.ageAtPurchase" min=0 (keyup.enter)="trigger.closeMenu()"
+                                    (event)="logger($event)" (click)="$event.stopPropagation()" (blur)="logger(item)">
+                                <span matSuffix>hét</span>
+                            </mat-form-field>
+                        </form>
+                    </mat-menu>
+                    <img [src]="URL + item.image" [alt]="item.species">
+                    <h5 *ngIf="!item.customName">{{item.species}}</h5>
+                    <h5 *ngIf="item.customName">{{item.customName}}</h5>
+                    <h6 *ngIf="!item.customName && (item.nameOfSex !== item.species)">{{item.nameOfSex}}</h6>
+                </div>
+            </div>
+        </div>
+    </div>
 
-    <div class="barton-container">
+    <div class="poultry-container">
         <h2>Baromfi fajták</h2>
 
         <div id="source-list" class="poultry-list" cdkDropList [cdkDropListData]="poultry"
             (cdkDropListDropped)="drop($event)" cdkDropListOrientation="horizontal">
             <div class="items" *ngFor="let item of poultry" cdkDrag>
-                <!-- [ngStyle]="{'background-image': 'url(' + item.image + ')'}"> -->
                 <img [src]="URL + item.image" [alt]="item.species">
                 <h5>{{item.species}}</h5>
                 <h6 *ngIf="item.nameOfSex !== item.species">{{item.nameOfSex}}</h6>
