--- a/eggShell/src/app/components/getting-started/getting-started.component.scss
+++ b/eggShell/src/app/components/getting-started/getting-started.component.scss
@@ -8,9 +8,9 @@
         text-decoration: none;
     }
 
-    .link {
-        color: blue;
-    }
+    // .link {
+    //     color: blue;
+    // }
 
     .auth {
         display: flex;
@@ -39,13 +39,17 @@
 
     .tab-group {
         margin: 1em auto;
+        text-align: center;
+        button {
+            margin: 3em;
+        }
 
         .invite {
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            margin: 3em auto;
+            margin: 2em auto;
             mat-form-field {
                 margin-bottom: 3em;
             }
