--- a/eggShell/src/app/components/nav/nav.component.html
+++ b/eggShell/src/app/components/nav/nav.component.html
@@ -128,14 +128,10 @@
     <div class="progress">
       <mat-progress-bar mode="indeterminate" *ngIf="progress.isLoading"></mat-progress-bar>
     </div>
+    <!-- <app-getting-started></app-getting-started> -->
     <app-getting-started 
-      >
+      *ngIf="(isLoggedIn !== undefined) || (!hasBarton)">
     </app-getting-started>
-    <!-- <app-getting-started 
-      *ngIf="isLoggedIn !== undefined" 
-      [isLoggedIn]="isLoggedIn"
-      [userObject]="userObject">
-    </app-getting-started> -->
     <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
