--- a/eggShell/src/app/components/getting-started/getting-started.component.scss
+++ b/eggShell/src/app/components/getting-started/getting-started.component.scss
@@ -1,5 +1,6 @@
 .stepper {
-    height: calc(100vh - 68px);
+    min-height: calc(100vh - 68px);
+    height: fit-content;
 
     .label {
         font-weight: 200;
@@ -50,9 +51,44 @@
             align-items: center;
             justify-content: center;
             margin: 2em auto;
+
+            .mat-progress-bar {
+                width: 12em;
+            }
+
             mat-form-field {
                 margin-bottom: 3em;
             }
+        }
+    }
+
+    .done {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        align-content: center;
+        // min-height: calc(100vh - 12em);
+        min-height: 75vh;
+        color: green;
+
+        h3 {
+            font-size: xx-large;
+        }
+        p {
+            font-size: large;
+            font-weight: 200;
+        }
+        .mat-icon {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            align-content: center;
+            width: 100%;
+            height: 2.5em;
+            font-size: 5em;
+            margin: 0 auto;
         }
     }
 }
