--- a/eggShell/src/styles.scss
+++ b/eggShell/src/styles.scss
@@ -1,7 +1,7 @@
 // @import "../node_modules/@angular/material/core/core-theme";
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
-@use '@angular/material' as mat;
+@use "@angular/material" as mat;
 // Plus imports for other components in your app.
 
 // Include the common styles for Angular Material. We include this here so that you only
@@ -20,13 +20,15 @@ $eggShell-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$eggShell-light-theme: mat.define-light-theme((
-  color: (
-    primary: $eggShell-primary,
-    accent: $eggShell-accent,
-    warn: $eggShell-warn,
+$eggShell-light-theme: mat.define-light-theme(
+  (
+    color: (
+      primary: $eggShell-primary,
+      accent: $eggShell-accent,
+      warn: $eggShell-warn,
+    ),
   )
-));
+);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
@@ -35,57 +37,71 @@ $eggShell-light-theme: mat.define-light-theme((
 
 /* You can add global styles to this file, and also import other style files */
 
-html, body { 
+html,
+body {
   box-sizing: border-box;
-  height: 100vh; 
+  height: 100vh;
   width: 100%;
   // max-width: 100%;
 }
 
-body { 
-  margin: 0; 
-  font-family: "Helvetica Neue", sans-serif; 
-  
+body {
+  margin: 0;
+  font-family: "Helvetica Neue", sans-serif;
 }
 // body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .snackbar-ok {
-    background: #00a00b;
+  background: #00a00b;
+  color: whitesmoke;
+  box-shadow: 2px 4px 8px 0 rgba(0, 0, 0, 0.8);
+  button {
     color: whitesmoke;
-    box-shadow: 2px 4px 8px 0 rgba(0, 0, 0, 0.8);
+  }
 }
 .snackbar-error {
-    background: #970000;
+  background: #970000;
+  color: whitesmoke;
+  box-shadow: 2px 4px 8px 0 rgba(0, 0, 0, 0.8);
+  button {
     color: whitesmoke;
-    box-shadow: 2px 4px 8px 0 rgba(0, 0, 0, 0.8);
+  }
+}
+.snackbar-info {
+  background: orange;
+  color: whitesmoke;
+  box-shadow: 2px 4px 8px 0 rgba(0, 0, 0, 0.8);
+  button {
+    color: whitesmoke;
+  }
 }
 
 .form-container {
-    width: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  .form {
+    width: 20em;
+    max-width: 100%;
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     align-items: center;
+    flex-direction: column;
+    padding: 1em 0;
+    margin: 0 auto;
+    border-radius: 1em;
 
-    .form {
-        width: 20em;
-        max-width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        padding: 1em 0;
-        margin: 0 auto;
-        border-radius: 1em;
-
-        h2 {
-            text-align: center;
-            font-weight: 300;
-        }
-
-        .submit-button {
-            margin: 3em auto 1em;
-        }
+    h2 {
+      text-align: center;
+      font-weight: 300;
     }
+
+    .submit-button {
+      margin: 3em auto 1em;
+    }
+  }
 }
 
 // html, body { height: 100%; }
