--- a/eggShell/src/app/components/getting-started/getting-started.component.html
+++ b/eggShell/src/app/components/getting-started/getting-started.component.html
@@ -33,7 +33,7 @@
         </ng-template>
         <mat-tab-group class="tab-group" mat-align-tabs="center" [selectedIndex]="tabIndex">
             <mat-tab class="tab-content" label="létrehozok">
-                <app-barton [bartonsData]="bartonsData"></app-barton>
+                <app-barton ></app-barton>
                 <button mat-raised-button color="accent" matStepperNext (click)="saveBarton()">
                     Kész!
                 </button>
