--- a/eggShell/src/app/barton/barton.component.html
+++ b/eggShell/src/app/barton/barton.component.html
@@ -1,15 +1,16 @@
 <div cdkDropListGroup>
 
-    <div class="barton-container" >
+    <div class="barton-container">
         <mat-card class="barton" *ngFor="let barton of (bartonsData$ | async); index as i">
             <mat-card-header class="barton-header" *ngIf="barton.active">
                 <mat-form-field>
                     <form ngForm [ngFormOptions]="{updateOn: 'blur'}">
-                    <input type="text" matInput appearance="standard" ngModel [(ngModel)]="barton.bartonName"
-                        [ngModelOptions]="{standalone: true}" [value]="barton.bartonName" [disabled]="!isOwner(barton)">
-                </form>
+                        <input type="text" matInput appearance="standard" ngModel [(ngModel)]="barton.bartonName"
+                            [ngModelOptions]="{standalone: true}" [value]="barton.bartonName"
+                            [disabled]="!isOwner(barton)">
+                    </form>
                 </mat-form-field>
-                
+
                 <div class="header-buttons">
                     <button mat-icon-button color="accent" (click)="addNewBarton(i)">
                         <mat-icon>add_circle</mat-icon>
@@ -22,10 +23,12 @@
             </mat-card-header>
 
             <div class="poultry-list" cdkDropList [cdkDropListData]="(barton.poultry)"
-                (cdkDropListDropped)="drop($event)" cdkDropListOrientation="horizontal" [cdkDropListEnterPredicate]="isOwner(barton) ? allowMove : denyMove">
+                (cdkDropListDropped)="drop($event)" cdkDropListOrientation="horizontal"
+                [cdkDropListEnterPredicate]="isOwner(barton) ? allowMove : denyMove">
                 <div class="items" *ngFor="let item of (barton.poultry)" cdkDrag [matBadge]="item.quantity"
-                    matBadgeColor="accent" [matMenuTriggerFor]="menu" [cdkDragDisabled]="!isOwner(barton)" (menuClosed)="saveBarton(barton)">
-                    <mat-menu #menu="matMenu" (click)="$event.stopPropagation()" >
+                    matBadgeColor="accent" [matMenuTriggerFor]="menu" [cdkDragDisabled]="!isOwner(barton)"
+                    (menuClosed)="saveBarton(barton)">
+                    <mat-menu #menu="matMenu" (click)="$event.stopPropagation()">
                         <form class="item-form" ngForm mat-menu-item [ngFormOptions]="{updateOn: 'blur'}">
                             <mat-form-field class="form-field" appearance="standard">
                                 <mat-label>egyedszám</mat-label>
@@ -68,7 +71,7 @@
                             </mat-form-field>
                         </form>
                     </mat-menu>
-                    <img [src]="URL + item.image" [alt]="item.species">
+                    <img [src]="URL + item.image" [alt]="item.species" >
                     <h5 *ngIf="!item.customName">{{item.species}}</h5>
                     <h5 *ngIf="item.customName">{{item.customName}}</h5>
                     <h6 *ngIf="!item.customName && (item.nameOfSex !== item.species)">{{item.nameOfSex}}</h6>
@@ -77,10 +80,15 @@
         </mat-card>
     </div>
 
-    <div class="poultry-container">
-        <h2>Baromfi fajták</h2>
-
-        <div id="source-list" class="poultry-list" cdkDropList [cdkDropListData]="poultry"
+    <div *ngIf="editAllowed" class="poultry-container">
+        <mat-expansion-panel [hideToggle]="false">
+            <mat-expansion-panel-header>
+                <mat-panel-title>
+                    <h2>Baromfi fajták</h2>
+                </mat-panel-title>
+                <!-- <mat-panel-description></mat-panel-description> -->
+            </mat-expansion-panel-header>
+            <div id="source-list" class="poultry-list" cdkDropList [cdkDropListData]="poultry"
             (cdkDropListDropped)="drop($event)" cdkDropListOrientation="horizontal">
             <div class="items" *ngFor="let item of poultry" cdkDrag>
                 <img [src]="URL + item.image" [alt]="item.species">
@@ -88,6 +96,10 @@
                 <h6 *ngIf="item.nameOfSex !== item.species">{{item.nameOfSex}}</h6>
             </div>
         </div>
+        </mat-expansion-panel>
+        
+
+        
     </div>
 
 </div>
