--- a/eggShell/src/app/components/settings/settings.component.html
+++ b/eggShell/src/app/components/settings/settings.component.html
@@ -1,1 +1,7 @@
-<p>settings works!</p>
+<mat-tab-group mat-align-tabs="center">
+    <mat-tab label="Udvarok">
+        <app-barton [editAllowed]="true"></app-barton>
+    </mat-tab>
+    <!-- <mat-tab label="Second">Content 2</mat-tab> -->
+    <!-- <mat-tab label="Third">Content 3</mat-tab> -->
+</mat-tab-group>
