--- a/eggShell/src/app/nav/nav.component.scss
+++ b/eggShell/src/app/nav/nav.component.scss
@@ -4,10 +4,18 @@
 }
 
 .sidenav {
-  width: 200px;
+  // box-sizing: border-box;
+  // max-width: 200px;
+  font-weight: 300;
+  font-size: medium;
+  // padding-right: 1.25em;
 
-  a span {
-    padding-top: 0.1em;
+  a {
+    padding-right: 1.25em;
+
+    span {
+      padding-top: 0.1em;
+    }
   }
 
   mat-icon {
@@ -16,11 +24,13 @@
 
   .mat-toolbar {
     display: flex;
+    padding: 0;
     // width: 100%;
-    justify-content: flex-end;
+    // justify-content: flex-end;
 
     mat-icon {
       padding: 0;
+      margin: 0;
     }
   }
 }
